--- a/改动说明.html
+++ b/改动说明.html
@@ -7,7 +7,7 @@
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/改动说明/styles.css" type="text/css" rel="stylesheet"/>
-    <script src="resources/scripts/jquery-3.2.1.min.js"></script>
+    <script src="resources/scripts/jquery-3.7.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
     <script src="resources/scripts/axutils.js"></script>
@@ -48,7 +48,7 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u0" class="ax_default _三级标题">
         <div id="u0_div" class=""></div>
         <div id="u0_text" class="text ">
