--- a/充值.html
+++ b/充值.html
@@ -7,7 +7,7 @@
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/充值/styles.css" type="text/css" rel="stylesheet"/>
-    <script src="resources/scripts/jquery-3.2.1.min.js"></script>
+    <script src="resources/scripts/jquery-3.7.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
     <script src="resources/scripts/axutils.js"></script>
@@ -48,7 +48,7 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Image) -->
+      <!-- Unnamed (图片) -->
       <div id="u387" class="ax_default _图片">
         <img id="u387_img" class="img " src="images/充值/u387.png"/>
         <div id="u387_text" class="text " style="display:none; visibility: hidden">
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u388" class="ax_default box_1">
         <div id="u388_div" class=""></div>
         <div id="u388_text" class="text " style="display:none; visibility: hidden">
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Droplist) -->
+      <!-- Unnamed (下拉框) -->
       <div id="u389" class="ax_default droplist">
         <div id="u389_div" class=""></div>
         <select id="u389_input" class="u389_input">
@@ -72,7 +72,7 @@
         </select>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u390" class="ax_default label">
         <div id="u390_div" class=""></div>
         <div id="u390_text" class="text ">
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u391" class="ax_default box_1">
         <div id="u391_div" class=""></div>
         <div id="u391_text" class="text " style="display:none; visibility: hidden">
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u392" class="ax_default button">
         <div id="u392_div" class=""></div>
         <div id="u392_text" class="text ">
