--- a/登录注册.html
+++ b/登录注册.html
@@ -7,7 +7,7 @@
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/登录注册/styles.css" type="text/css" rel="stylesheet"/>
-    <script src="resources/scripts/jquery-3.2.1.min.js"></script>
+    <script src="resources/scripts/jquery-3.7.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
     <script src="resources/scripts/axutils.js"></script>
@@ -48,7 +48,7 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u1" class="ax_default box_1">
         <div id="u1_div" class=""></div>
         <div id="u1_text" class="text " style="display:none; visibility: hidden">
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u2" class="ax_default box_1">
         <div id="u2_div" class=""></div>
         <div id="u2_text" class="text " style="display:none; visibility: hidden">
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u3" class="ax_default box_1">
         <div id="u3_div" class=""></div>
         <div id="u3_text" class="text ">
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u4" class="ax_default box_1">
         <div id="u4_div" class=""></div>
         <div id="u4_text" class="text ">
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u5" class="ax_default _二级标题">
         <div id="u5_div" class=""></div>
         <div id="u5_text" class="text ">
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u6" class="ax_default label">
         <div id="u6_div" class=""></div>
         <div id="u6_text" class="text ">
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u7" class="ax_default line">
         <img id="u7_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u7_text" class="text " style="display:none; visibility: hidden">
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u8" class="ax_default label">
         <div id="u8_div" class=""></div>
         <div id="u8_text" class="text ">
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u9" class="ax_default label">
         <div id="u9_div" class=""></div>
         <div id="u9_text" class="text ">
@@ -120,7 +120,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u10" class="ax_default line">
         <img id="u10_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u10_text" class="text " style="display:none; visibility: hidden">
@@ -128,7 +128,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u11" class="ax_default label">
         <div id="u11_div" class=""></div>
         <div id="u11_text" class="text ">
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u12" class="ax_default button">
         <div id="u12_div" class=""></div>
         <div id="u12_text" class="text ">
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u13" class="ax_default label">
         <div id="u13_div" class=""></div>
         <div id="u13_text" class="text ">
@@ -152,7 +152,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u14" class="ax_default button">
         <div id="u14_div" class=""></div>
         <div id="u14_text" class="text ">
@@ -160,7 +160,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u15" class="ax_default _段落">
         <div id="u15_div" class=""></div>
         <div id="u15_text" class="text ">
@@ -168,7 +168,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u16" class="ax_default _三级标题">
         <div id="u16_div" class=""></div>
         <div id="u16_text" class="text ">
@@ -176,7 +176,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u17" class="ax_default box_1">
         <div id="u17_div" class=""></div>
         <div id="u17_text" class="text " style="display:none; visibility: hidden">
@@ -184,7 +184,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u18" class="ax_default box_1">
         <div id="u18_div" class=""></div>
         <div id="u18_text" class="text ">
@@ -192,7 +192,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Placeholder) -->
+      <!-- Unnamed (占位符) -->
       <div id="u19" class="ax_default placeholder">
         <img id="u19_img" class="img " src="images/登录注册/u19.svg"/>
         <div id="u19_text" class="text ">
@@ -200,7 +200,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u20" class="ax_default _二级标题">
         <div id="u20_div" class=""></div>
         <div id="u20_text" class="text ">
@@ -208,7 +208,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u21" class="ax_default box_1">
         <div id="u21_div" class=""></div>
         <div id="u21_text" class="text " style="display:none; visibility: hidden">
@@ -216,7 +216,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u22" class="ax_default box_1">
         <div id="u22_div" class=""></div>
         <div id="u22_text" class="text ">
@@ -224,7 +224,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u23" class="ax_default label">
         <div id="u23_div" class=""></div>
         <div id="u23_text" class="text ">
@@ -232,7 +232,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u24" class="ax_default line">
         <img id="u24_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u24_text" class="text " style="display:none; visibility: hidden">
@@ -240,7 +240,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u25" class="ax_default label">
         <div id="u25_div" class=""></div>
         <div id="u25_text" class="text ">
@@ -248,7 +248,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u26" class="ax_default label">
         <div id="u26_div" class=""></div>
         <div id="u26_text" class="text ">
@@ -256,7 +256,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u27" class="ax_default line">
         <img id="u27_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u27_text" class="text " style="display:none; visibility: hidden">
@@ -264,7 +264,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u28" class="ax_default label">
         <div id="u28_div" class=""></div>
         <div id="u28_text" class="text ">
@@ -272,7 +272,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u29" class="ax_default button">
         <div id="u29_div" class=""></div>
         <div id="u29_text" class="text ">
@@ -280,7 +280,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u30" class="ax_default label">
         <div id="u30_div" class=""></div>
         <div id="u30_text" class="text ">
@@ -288,7 +288,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Placeholder) -->
+      <!-- Unnamed (占位符) -->
       <div id="u31" class="ax_default placeholder">
         <img id="u31_img" class="img " src="images/登录注册/u31.svg"/>
         <div id="u31_text" class="text ">
@@ -296,7 +296,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u32" class="ax_default button">
         <div id="u32_div" class=""></div>
         <div id="u32_text" class="text ">
@@ -304,7 +304,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u33" class="ax_default label">
         <div id="u33_div" class=""></div>
         <div id="u33_text" class="text ">
@@ -312,7 +312,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u34" class="ax_default line">
         <img id="u34_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u34_text" class="text " style="display:none; visibility: hidden">
@@ -320,7 +320,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u35" class="ax_default label">
         <div id="u35_div" class=""></div>
         <div id="u35_text" class="text ">
@@ -328,7 +328,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Checkbox) -->
+      <!-- Unnamed (复选框) -->
       <div id="u36" class="ax_default checkbox">
         <label id="u36_input_label" for="u36_input" style="position: absolute; left: 0px;">
           <img id="u36_img" class="img " src="images/登录注册/u36.svg"/>
@@ -339,7 +339,7 @@
         <input id="u36_input" type="checkbox" value="checkbox"/>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u37" class="ax_default label">
         <div id="u37_div" class=""></div>
         <div id="u37_text" class="text ">
@@ -347,7 +347,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u38" class="ax_default line">
         <img id="u38_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u38_text" class="text " style="display:none; visibility: hidden">
@@ -355,7 +355,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u39" class="ax_default label">
         <div id="u39_div" class=""></div>
         <div id="u39_text" class="text ">
@@ -363,7 +363,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u40" class="ax_default _二级标题">
         <div id="u40_div" class=""></div>
         <div id="u40_text" class="text ">
@@ -371,7 +371,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u41" class="ax_default _二级标题">
         <div id="u41_div" class=""></div>
         <div id="u41_text" class="text ">
@@ -379,7 +379,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u42" class="ax_default box_1">
         <div id="u42_div" class=""></div>
         <div id="u42_text" class="text " style="display:none; visibility: hidden">
@@ -387,7 +387,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u43" class="ax_default box_1">
         <div id="u43_div" class=""></div>
         <div id="u43_text" class="text ">
@@ -395,7 +395,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u44" class="ax_default label">
         <div id="u44_div" class=""></div>
         <div id="u44_text" class="text ">
@@ -403,7 +403,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u45" class="ax_default line">
         <img id="u45_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u45_text" class="text " style="display:none; visibility: hidden">
@@ -411,7 +411,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u46" class="ax_default label">
         <div id="u46_div" class=""></div>
         <div id="u46_text" class="text ">
@@ -419,7 +419,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u47" class="ax_default button">
         <div id="u47_div" class=""></div>
         <div id="u47_text" class="text ">
@@ -427,7 +427,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Placeholder) -->
+      <!-- Unnamed (占位符) -->
       <div id="u48" class="ax_default placeholder">
         <img id="u48_img" class="img " src="images/登录注册/u48.svg"/>
         <div id="u48_text" class="text ">
@@ -435,7 +435,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u49" class="ax_default button">
         <div id="u49_div" class=""></div>
         <div id="u49_text" class="text ">
@@ -443,7 +443,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u50" class="ax_default label">
         <div id="u50_div" class=""></div>
         <div id="u50_text" class="text ">
@@ -451,7 +451,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u51" class="ax_default line">
         <img id="u51_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u51_text" class="text " style="display:none; visibility: hidden">
@@ -459,7 +459,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u52" class="ax_default label">
         <div id="u52_div" class=""></div>
         <div id="u52_text" class="text ">
@@ -467,7 +467,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Checkbox) -->
+      <!-- Unnamed (复选框) -->
       <div id="u53" class="ax_default checkbox">
         <label id="u53_input_label" for="u53_input" style="position: absolute; left: 0px;">
           <img id="u53_img" class="img " src="images/登录注册/u53.svg"/>
@@ -478,7 +478,7 @@
         <input id="u53_input" type="checkbox" value="checkbox"/>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u54" class="ax_default label">
         <div id="u54_div" class=""></div>
         <div id="u54_text" class="text ">
@@ -486,7 +486,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u55" class="ax_default line">
         <img id="u55_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u55_text" class="text " style="display:none; visibility: hidden">
@@ -494,7 +494,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u56" class="ax_default label">
         <div id="u56_div" class=""></div>
         <div id="u56_text" class="text ">
@@ -502,7 +502,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u57" class="ax_default _三级标题">
         <div id="u57_div" class=""></div>
         <div id="u57_text" class="text ">
@@ -510,7 +510,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u58" class="ax_default label">
         <div id="u58_div" class=""></div>
         <div id="u58_text" class="text ">
@@ -518,7 +518,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Line) -->
+      <!-- Unnamed (线段) -->
       <div id="u59" class="ax_default line">
         <img id="u59_img" class="img " src="images/登录注册/u7.svg"/>
         <div id="u59_text" class="text " style="display:none; visibility: hidden">
@@ -526,7 +526,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u60" class="ax_default label">
         <div id="u60_div" class=""></div>
         <div id="u60_text" class="text ">
@@ -534,7 +534,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u61" class="ax_default _三级标题">
         <div id="u61_div" class=""></div>
         <div id="u61_text" class="text ">
@@ -542,7 +542,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u62" class="ax_default box_1">
         <div id="u62_div" class=""></div>
         <div id="u62_text" class="text " style="display:none; visibility: hidden">
@@ -550,7 +550,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u63" class="ax_default box_1">
         <div id="u63_div" class=""></div>
         <div id="u63_text" class="text ">
@@ -558,7 +558,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u64" class="ax_default box_1">
         <div id="u64_div" class=""></div>
         <div id="u64_text" class="text ">
@@ -566,7 +566,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u65" class="ax_default button">
         <div id="u65_div" class=""></div>
         <div id="u65_text" class="text ">
@@ -574,7 +574,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Placeholder) -->
+      <!-- Unnamed (占位符) -->
       <div id="u66" class="ax_default placeholder">
         <img id="u66_img" class="img " src="images/登录注册/u66.svg"/>
         <div id="u66_text" class="text ">
@@ -582,7 +582,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u67" class="ax_default _三级标题">
         <div id="u67_div" class=""></div>
         <div id="u67_text" class="text ">
@@ -590,7 +590,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Unnamed (矩形) -->
       <div id="u68" class="ax_default button">
         <div id="u68_div" class=""></div>
         <div id="u68_text" class="text ">
