--- a/多次fa记录（10-17优化）.html
+++ b/多次fa记录（10-17优化）.html
@@ -1109,7 +1109,7 @@
       <div id="u493" class="ax_default button">
         <div id="u493_div" class=""></div>
         <div id="u493_text" class="text ">
-          <p><span>卖出金额（市值、收益金额）</span></p>
+          <p><span>卖出金额（市值、交易金额）</span></p>
         </div>
       </div>
 
