--- a/单次fa记录（10-17优化）.html
+++ b/单次fa记录（10-17优化）.html
@@ -1353,7 +1353,7 @@
       <div id="u332" class="ax_default button">
         <div id="u332_div" class=""></div>
         <div id="u332_text" class="text ">
-          <p><span>卖出金额（市值、收益金额）</span></p>
+          <p><span>卖出金额（市值、交易金额）</span></p>
         </div>
       </div>
 
