--- a/单次跟单列表.html
+++ b/单次跟单列表.html
@@ -3332,6 +3332,88 @@
           <p><span>个人数据：</span></p><p><span>总收益：列表中“用户收益”总和。</span></p><p><span>今日收益：今日用户新增“用户收益”</span></p><p><span>跟单总金额：两个表中FA金额总和</span></p><p><span>单次跟投锁仓：进行中未建仓的FA金额总和。</span></p><p><span>多次跟投锁仓：进行中的FA金额总和。</span></p><p><span>团队数据：</span></p><p><span>直属成员：这个我知道</span></p><p><span>单次跟投锁仓金额：直推用户进行中未建仓的FA金额总和。</span></p><p><span>多次跟投锁仓金额：直推用户进行中的FA金额总和。</span></p><p><span>我的同源总盈亏：我给直推用户分摊的盈亏总金额。（那12%）</span></p><p><span>我的今日同源总盈亏：同上的今日</span></p><p><span>直属总盈亏：直推用户总的盈亏金额</span></p><p><span>直属今日盈亏：直推用户今日的盈亏总金额。</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1207" class="ax_default box_2">
+        <img id="u1207_img" class="img " src="images/单次跟单列表/u1207.svg"/>
+        <div id="u1207_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1208" class="ax_default label">
+        <div id="u1208_div" class=""></div>
+        <div id="u1208_text" class="text ">
+          <p><span>买入时间</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1209" class="ax_default _三级标题">
+        <div id="u1209_div" class=""></div>
+        <div id="u1209_text" class="text ">
+          <p><span>批量写入建仓单</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u1210" class="ax_default text_field">
+        <div id="u1210_div" class=""></div>
+        <input id="u1210_input" type="text" value="" class="u1210_input"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1211" class="ax_default label">
+        <div id="u1211_div" class=""></div>
+        <div id="u1211_text" class="text ">
+          <p><span>股票编号：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u1212" class="ax_default text_field">
+        <div id="u1212_div" class=""></div>
+        <input id="u1212_input" type="text" value="0001" class="u1212_input"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1213" class="ax_default button">
+        <div id="u1213_div" class=""></div>
+        <div id="u1213_text" class="text ">
+          <p><span>取消</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1214" class="ax_default button">
+        <div id="u1214_div" class=""></div>
+        <div id="u1214_text" class="text ">
+          <p><span>确认</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1215" class="ax_default button">
+        <div id="u1215_div" class=""></div>
+        <div id="u1215_text" class="text ">
+          <p><span>刷新</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1216" class="ax_default label">
+        <div id="u1216_div" class=""></div>
+        <div id="u1216_text" class="text ">
+          <p><span>股票名称：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u1217" class="ax_default text_field">
+        <div id="u1217_div" class=""></div>
+        <input id="u1217_input" type="text" value="中远海空" class="u1217_input"/>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
