--- a/单次跟单列表.html
+++ b/单次跟单列表.html
@@ -3414,6 +3414,14 @@
         <div id="u1217_div" class=""></div>
         <input id="u1217_input" type="text" value="中远海空" class="u1217_input"/>
       </div>
+
+      <!-- Unnamed (线段) -->
+      <div id="u1218" class="ax_default line">
+        <img id="u1218_img" class="img " src="images/单次跟单列表/u1218.svg"/>
+        <div id="u1218_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
