--- a/单次跟单列表.html
+++ b/单次跟单列表.html
@@ -3345,7 +3345,7 @@
       <div id="u1208" class="ax_default label">
         <div id="u1208_div" class=""></div>
         <div id="u1208_text" class="text ">
-          <p><span>买入时间</span></p>
+          <p><span>当前价格</span></p>
         </div>
       </div>
 
@@ -3421,6 +3421,20 @@
         <div id="u1218_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1219" class="ax_default label">
+        <div id="u1219_div" class=""></div>
+        <div id="u1219_text" class="text ">
+          <p><span>买入时间</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u1220" class="ax_default text_field">
+        <div id="u1220_div" class=""></div>
+        <input id="u1220_input" type="text" value="" class="u1220_input"/>
       </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
