--- a/人工充值-前端.html
+++ b/人工充值-前端.html
@@ -141,6 +141,14 @@
           <p><span>上传1张图片</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1681" class="ax_default _三级标题">
+        <div id="u1681_div" class=""></div>
+        <div id="u1681_text" class="text ">
+          <p><span>用户输入对应渠道密码后，进入本界面</span></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
